# git-desktop-premium-ultra-promax-plus-R

./: .gitattributes  .gitignore  LICENSE  LOGOS_NOW_AND_NEXT.md  LOGOS_WHISPER_CODEC_BORROWINGS.md  README.md  globals_dump.css  package-lock.json  package.json  tsconfig.base.json  typecheck.txt
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/workflows/: desktop-ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  (+2 more)
apps/desktop-flutter/: .gitignore  .metadata  README.md  analyze.txt  build_log.txt  pubspec.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/errors/: mod.rs
apps/desktop/src-tauri/src/models/: contract.rs  git.rs  mod.rs  operations.rs  repository.rs  settings.rs
apps/desktop/src-tauri/src/runtime/: state.rs
apps/desktop/src-tauri/src/services/: ai_audit_service.rs  ai_service.rs  auth_service.rs  bootstrap_service.rs  crash_reporting_service.rs  diff_service.rs  forge_remote_service.rs  forge_service.rs  issue_service.rs  local_issue_service.rs  local_pull_request_service.rs  local_store.rs  logging_service.rs  mod.rs  pretext_service.rs  pull_request_service.rs  remote_topology_service.rs  repository_read_service.rs  repository_root_service.rs  repository_service.rs  repository_topology_service.rs  settings_service.rs  storage_paths.rs  telemetry_service.rs  update_service.rs
apps/desktop/src-tauri/src/services/git_provider/: cli.rs  mod.rs
docs/: logos-backend-architecture.md
fixtures/: README.md
(+491 files in other folders)
